[gd_scene load_steps=85 format=3 uid="uid://2d8r525dkgxs"]

[ext_resource type="Script" path="res://scripts/actors/enemies/AncientGuard/ancient_guard.gd" id="1_kgsc7"]
[ext_resource type="Script" path="res://scripts/states/EnemyStates/AncientGuardStates/AncientGuardIdle.gd" id="4_w5tnh"]
[ext_resource type="Script" path="res://scripts/actors/enemies/AncientGuard/ancient_guard_hurtbox.gd" id="6_tf0bi"]
[ext_resource type="Texture2D" uid="uid://dupudirhsaxbd" path="res://assets/Dark Series/Enemies/The Ancient Guard/Guardian-Laser.png" id="8_l4xjx"]
[ext_resource type="Script" path="res://scripts/states/EnemyStates/AncientGuardStates/AncientGuardDie.gd" id="10_e7qyg"]
[ext_resource type="Script" path="res://scripts/states/EnemyStates/AncientGuardStates/AncientGuardFrozen.gd" id="11_wxo5e"]
[ext_resource type="Script" path="res://scripts/states/State_Machine.gd" id="11_yl3pa"]
[ext_resource type="Texture2D" uid="uid://bgxfquiv1r040" path="res://assets/Dark Series/Enemies/The Ancient Guard/Guardian-Appear.png" id="12_b3df0"]
[ext_resource type="Script" path="res://scripts/states/EnemyStates/AncientGuardStates/AncientGuardHurt.gd" id="12_l06jm"]
[ext_resource type="Script" path="res://scripts/states/EnemyStates/AncientGuardStates/AncientGuardLaser.gd" id="13_jkqxy"]
[ext_resource type="Texture2D" uid="uid://dr05cc0assp4c" path="res://assets/Dark Series/Enemies/The Ancient Guard/Guardian-Idle.png" id="13_ppaso"]
[ext_resource type="Script" path="res://scripts/states/EnemyStates/PandaStates/PandaFall.gd" id="16_6dcvl"]
[ext_resource type="Texture2D" uid="uid://coaqtk4h0vu0" path="res://assets/Dark Series/Enemies/The Ancient Guard/Guardian-death.png" id="16_dxna1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hqvcx"]
atlas = ExtResource("16_dxna1")
region = Rect2(0, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_83box"]
atlas = ExtResource("16_dxna1")
region = Rect2(166, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ums8c"]
atlas = ExtResource("16_dxna1")
region = Rect2(332, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkubi"]
atlas = ExtResource("16_dxna1")
region = Rect2(498, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_oade7"]
atlas = ExtResource("16_dxna1")
region = Rect2(664, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2lx2"]
atlas = ExtResource("16_dxna1")
region = Rect2(830, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_eswga"]
atlas = ExtResource("16_dxna1")
region = Rect2(996, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7w23m"]
atlas = ExtResource("16_dxna1")
region = Rect2(1162, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kvbx"]
atlas = ExtResource("16_dxna1")
region = Rect2(1328, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_tb32e"]
atlas = ExtResource("16_dxna1")
region = Rect2(1494, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_diibq"]
atlas = ExtResource("16_dxna1")
region = Rect2(1660, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2so4"]
atlas = ExtResource("16_dxna1")
region = Rect2(1826, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_xanjm"]
atlas = ExtResource("12_b3df0")
region = Rect2(830, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajdun"]
atlas = ExtResource("12_b3df0")
region = Rect2(1162, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrs5f"]
atlas = ExtResource("12_b3df0")
region = Rect2(664, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5c2wa"]
atlas = ExtResource("12_b3df0")
region = Rect2(830, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_orsqk"]
atlas = ExtResource("12_b3df0")
region = Rect2(996, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewxra"]
atlas = ExtResource("12_b3df0")
region = Rect2(1162, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxmiq"]
atlas = ExtResource("13_ppaso")
region = Rect2(0, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncej2"]
atlas = ExtResource("13_ppaso")
region = Rect2(166, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7sk1w"]
atlas = ExtResource("13_ppaso")
region = Rect2(332, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfwdw"]
atlas = ExtResource("13_ppaso")
region = Rect2(498, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8sw8j"]
atlas = ExtResource("13_ppaso")
region = Rect2(664, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_rds14"]
atlas = ExtResource("13_ppaso")
region = Rect2(830, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7e8g"]
atlas = ExtResource("13_ppaso")
region = Rect2(996, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_no7kp"]
atlas = ExtResource("13_ppaso")
region = Rect2(1162, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_oe6nl"]
atlas = ExtResource("13_ppaso")
region = Rect2(1328, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_poxow"]
atlas = ExtResource("13_ppaso")
region = Rect2(1494, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjqt6"]
atlas = ExtResource("13_ppaso")
region = Rect2(1660, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8wrm"]
atlas = ExtResource("13_ppaso")
region = Rect2(1826, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ft21"]
atlas = ExtResource("13_ppaso")
region = Rect2(1992, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ln60d"]
atlas = ExtResource("13_ppaso")
region = Rect2(2158, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_aesx2"]
atlas = ExtResource("13_ppaso")
region = Rect2(2324, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_whdkg"]
atlas = ExtResource("13_ppaso")
region = Rect2(2490, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymjdt"]
atlas = ExtResource("13_ppaso")
region = Rect2(2656, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_vu3fg"]
atlas = ExtResource("13_ppaso")
region = Rect2(2822, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_640xi"]
atlas = ExtResource("13_ppaso")
region = Rect2(2988, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgooj"]
atlas = ExtResource("13_ppaso")
region = Rect2(3154, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6e2k"]
atlas = ExtResource("13_ppaso")
region = Rect2(3320, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbhtw"]
atlas = ExtResource("13_ppaso")
region = Rect2(3486, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4876"]
atlas = ExtResource("13_ppaso")
region = Rect2(3652, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2s8a"]
atlas = ExtResource("13_ppaso")
region = Rect2(3818, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_b27po"]
atlas = ExtResource("8_l4xjx")
region = Rect2(0, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmki7"]
atlas = ExtResource("8_l4xjx")
region = Rect2(166, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_sng1l"]
atlas = ExtResource("8_l4xjx")
region = Rect2(332, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvl0p"]
atlas = ExtResource("8_l4xjx")
region = Rect2(498, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_icogn"]
atlas = ExtResource("8_l4xjx")
region = Rect2(664, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kvtg"]
atlas = ExtResource("8_l4xjx")
region = Rect2(830, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1on6"]
atlas = ExtResource("8_l4xjx")
region = Rect2(996, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_utdi0"]
atlas = ExtResource("8_l4xjx")
region = Rect2(1162, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_wa2ry"]
atlas = ExtResource("8_l4xjx")
region = Rect2(1328, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdsim"]
atlas = ExtResource("8_l4xjx")
region = Rect2(1494, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4f2j1"]
atlas = ExtResource("8_l4xjx")
region = Rect2(1660, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_lty31"]
atlas = ExtResource("8_l4xjx")
region = Rect2(1826, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_xh165"]
atlas = ExtResource("8_l4xjx")
region = Rect2(1992, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_tt0x5"]
atlas = ExtResource("8_l4xjx")
region = Rect2(2324, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_l30lm"]
atlas = ExtResource("8_l4xjx")
region = Rect2(2490, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhjpn"]
atlas = ExtResource("8_l4xjx")
region = Rect2(2656, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ianxi"]
atlas = ExtResource("8_l4xjx")
region = Rect2(2822, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdv0l"]
atlas = ExtResource("8_l4xjx")
region = Rect2(2988, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfkhm"]
atlas = ExtResource("8_l4xjx")
region = Rect2(2158, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_oo57l"]
atlas = ExtResource("8_l4xjx")
region = Rect2(3154, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6y0n"]
atlas = ExtResource("8_l4xjx")
region = Rect2(3320, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_o21uh"]
atlas = ExtResource("8_l4xjx")
region = Rect2(3486, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghui2"]
atlas = ExtResource("8_l4xjx")
region = Rect2(3652, 0, 166, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ki6aa"]
atlas = ExtResource("8_l4xjx")
region = Rect2(3818, 0, 166, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_x0nqe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqvcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83box")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ums8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkubi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oade7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2lx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eswga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7w23m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kvbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tb32e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_diibq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2so4")
}],
"loop": false,
"name": &"die",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xanjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajdun")
}],
"loop": false,
"name": &"fall",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrs5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5c2wa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_orsqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewxra")
}],
"loop": false,
"name": &"hurt",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxmiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncej2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sk1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfwdw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8sw8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rds14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7e8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_no7kp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oe6nl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_poxow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjqt6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8wrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ft21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ln60d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aesx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whdkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymjdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vu3fg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_640xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgooj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6e2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbhtw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4876")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2s8a")
}],
"loop": true,
"name": &"idle",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b27po")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmki7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sng1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvl0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icogn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kvtg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1on6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utdi0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wa2ry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdsim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4f2j1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lty31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xh165")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tt0x5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l30lm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhjpn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ianxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdv0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfkhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oo57l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6y0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o21uh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghui2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ki6aa")
}],
"loop": false,
"name": &"laser",
"speed": 24.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mdx6r"]
size = Vector2(15, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iv5vi"]
size = Vector2(17, 18.8438)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pc27e"]
size = Vector2(161.5, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0eyfd"]
size = Vector2(73.1307, 6.11712)

[node name="ancient_guard" type="CharacterBody2D" groups=["ancient_guard"]]
position = Vector2(0, -16)
scale = Vector2(2, 2)
collision_layer = 4
collision_mask = 2
script = ExtResource("1_kgsc7")

[node name="anim" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -11)
sprite_frames = SubResource("SpriteFrames_x0nqe")
animation = &"laser"
frame = 23
frame_progress = 1.0
centered = false
offset = Vector2(-65, -76)

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_mdx6r")

[node name="hurtbox" type="Area2D" parent="." node_paths=PackedStringArray("enemy")]
collision_layer = 32
collision_mask = 8
script = ExtResource("6_tf0bi")
enemy = NodePath("..")

[node name="collision" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(1.5, -9.42188)
shape = SubResource("RectangleShape2D_iv5vi")

[node name="FSM" type="Node2D" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("11_yl3pa")
initial_state = NodePath("idle")

[node name="idle" type="Node2D" parent="FSM" node_paths=PackedStringArray("enemy")]
script = ExtResource("4_w5tnh")
enemy = NodePath("../..")

[node name="shoot_raycast" type="RayCast2D" parent="FSM/idle"]
position = Vector2(12.5, -4.5)
target_position = Vector2(85, 0)

[node name="shoot_cooldown" type="Timer" parent="FSM/idle"]
wait_time = 2.5
one_shot = true

[node name="spotted_player" type="Area2D" parent="FSM/idle"]

[node name="collision" type="CollisionShape2D" parent="FSM/idle/spotted_player"]
position = Vector2(15.25, -2.5)
shape = SubResource("RectangleShape2D_pc27e")
debug_color = Color(0, 0.643137, 0.286275, 0.419608)

[node name="fall" type="Node2D" parent="FSM" node_paths=PackedStringArray("enemy")]
script = ExtResource("16_6dcvl")
enemy = NodePath("../..")

[node name="die" type="Node2D" parent="FSM" node_paths=PackedStringArray("enemy")]
script = ExtResource("10_e7qyg")
enemy = NodePath("../..")

[node name="frozen" type="Node2D" parent="FSM" node_paths=PackedStringArray("enemy")]
script = ExtResource("11_wxo5e")
enemy = NodePath("../..")

[node name="Timer" type="Timer" parent="FSM/frozen"]
wait_time = 3.0
one_shot = true

[node name="hurt" type="Node2D" parent="FSM" node_paths=PackedStringArray("enemy")]
script = ExtResource("12_l06jm")
enemy = NodePath("../..")

[node name="shoot" type="Node2D" parent="FSM" node_paths=PackedStringArray("enemy")]
script = ExtResource("13_jkqxy")
enemy = NodePath("../..")

[node name="enemy_hitbox" type="Area2D" parent="FSM/shoot"]
collision_layer = 4
collision_mask = 0

[node name="collision" type="CollisionShape2D" parent="FSM/shoot/enemy_hitbox"]
position = Vector2(46.8824, 0.670253)
rotation = 0.127139
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_0eyfd")
disabled = true
debug_color = Color(0.964706, 0, 0.486275, 0.419608)

[node name="shoot_delay" type="Timer" parent="FSM/shoot"]
wait_time = 0.7
one_shot = true

[node name="Label" type="Label" parent="."]
offset_left = -52.0
offset_top = -50.0
offset_right = -12.0
offset_bottom = -27.0

[connection signal="area_entered" from="hurtbox" to="hurtbox" method="_on_area_entered"]
[connection signal="body_entered" from="FSM/idle/spotted_player" to="." method="_on_spotted_player_body_entered"]
